# agent-workbench

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
agent-assets/capability-agent/: AGENTS.md  IDENTITY.md
agent-assets/capability-agent/skills/capability-management/: SKILL.md
agent-assets/maintenance-agent/: AGENTS.md  IDENTITY.md  SOUL.md  USER.md
agent-assets/maintenance-agent/skills/openclaw-maintenance/: SKILL.md
docs/: mvp-implementation-plan.md  native-control-ui.md  persistent-gateway.md  phase_persistent_workspace.md
fixtures/: task.md
fixtures/input/: sample.csv  untrusted.md
gog/: techlett-google-readonly.yaml
openclaw/: openclaw.example.json5
scripts/: run_openclaw_smoke.sh  validate_nim.py
src/agent_workbench/: __init__.py  auth.py  config.py  executor.py  gateway.py  jobs.py  main.py  storage.py  worker.py  workflows.py  workspaces.py
src/agent_workbench/templates/: index.html  job.html  workspace.html
tests/: test_app.py  test_gateway.py  test_jobs.py  test_repository_isolation.py  test_worker.py  test_workflows.py  test_workspaces.py
