[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-workbench"
version = "0.1.0"
description = "Secure self-hosted agent workbench for file-based analysis workflows"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116,<1",
    "jinja2>=3.1,<4",
    "openai>=1.109.0,<2",
    "python-dotenv>=1.1,<2",
    "python-multipart>=0.0.20,<1",
    "uvicorn[standard]>=0.35,<1",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28,<1",
    "pytest>=8.4,<9",
    "ruff>=0.12,<1",
]

[project.scripts]
agent-workbench = "agent_workbench.main:run"\nagent-workbench-worker = "agent_workbench.worker:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_workbench"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
